[tool.poetry]
name = "rdflib_fuseki_playground"
version = "0.1.0"
description = "A playground for integrating with a Fuseki endpoint"
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Informasjonsforvaltning/rdflib-triplestore-playground"
repository = "https://github.com/Informasjonsforvaltning/rdflib-triplestore-playground"
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^5.0.0"
rdflib-jsonld = "^0.5.0"
requests = "^2.23.0"
sparqlwrapper = "^1.8.5"
python-dotenv = "^0.14.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
coverage = {extras = ["toml"], version = "^5.0.3"}
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"
mypy = "^0.770"
pytype = {version = "^2020.2.20", python = "3.8"}
flake8-annotations = "^2.0.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.2.0"
Pygments = "^2.6.1"
xdoctest = {extras = ["all"], version = "^0.11.0"}
sphinx = "^2.4.4"
sphinx-autodoc-typehints = "^1.10.3"
codecov = "^2.0.16"
flake8-assertive = "^1.2.1"
docker-compose = "^1.26.2"
pytest-docker = "^0.8.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["rdflib-triplestore-playground"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
